@startuml test_pyreverse
!pragma useIntermediatePackages false

class test_pyreverse.base.products.DigitalProduct {
  price: None
  discount: None
  __init__(self, product_id, name, price, discount)
  int get_price(self)
}
class test_pyreverse.base.products.PhysicalProduct {
  price: None
  __init__(self, product_id, name, price)
  get_price(self)
}
abstract class test_pyreverse.products.base.Product {
  product_id: None
  name: None
  __init__(self, product_id, name)
  get_price(self)
}
class test_pyreverse.products.base.Order {
  order_id: None
  product: Product
  quantity: None
  __init__(self, order_id, Product product, quantity)
  int calculate_total(self)
}
class test_pyreverse.products.customer.Customer {
  customer_id: None
  name: None
  orders: None
  __init__(self, customer_id, name)
  add_order(self, Order order)
  int get_total_spent(self)
}
annotation test_pyreverse.base.products.Methods {
  PhysicalProduct | DigitalProduct create_product(self: None, pid: 'str')
}
test_pyreverse.products.base.Product <|-- test_pyreverse.base.products.DigitalProduct
test_pyreverse.products.base.Product <|-- test_pyreverse.base.products.PhysicalProduct
test_pyreverse.products.base.Order *-- test_pyreverse.products.base.Product
test_pyreverse.base.products.Methods <-- test_pyreverse.base.products.PhysicalProduct: create_product
test_pyreverse.base.products.Methods <-- test_pyreverse.base.products.DigitalProduct: create_product
test_pyreverse.products.customer.Customer <-- test_pyreverse.products.base.Order
footer Generated by //py2puml//
@enduml
